--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,5 +7,6 @@
 @import "../../node_modules/bootstrap/scss/bootstrap.scss"; //sass --watch resources/sass/app.scss public/css/app.css
 //Estilos propios
 @import "normalize";
-@import "global";
+@import "menus";
 @import "loader";
+@import "global";
